--- a/support.html
+++ b/support.html
@@ -26,10 +26,10 @@
             
             <div class="glass p-12 rounded-3xl inline-block hover:bg-white/5 transition duration-300">
                 <svg class="w-16 h-16 mx-auto mb-6 text-[#6C63FF]" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
-                <a href="mailto:devryosuke2025@gmail.com" class="bg-white text-black px-10 py-4 rounded-full font-bold hover:bg-gray-200 transition inline-block" data-i18n="contact_btn">
+                <a href="mailto:devbyryosuke2025@gmail.com" class="bg-white text-black px-10 py-4 rounded-full font-bold hover:bg-gray-200 transition inline-block" data-i18n="contact_btn">
                     Contact Us via Email
                 </a>
-                <p class="mt-4 text-sm text-gray-500">devryosuke2025@gmail.com</p>
+                <p class="mt-4 text-sm text-gray-500">devbyryosuke2025@gmail.com</p>
             </div>
         </div>
     </main>
