--- a/privacy.html
+++ b/privacy.html
@@ -38,7 +38,7 @@
 
                 <div>
                     <h2 class="text-xl font-bold text-white mb-2" data-i18n="privacy_sec3_title">3. Contact Us</h2>
-                    <p data-i18n="privacy_sec3_desc">Contact us at devryosuke2025@gmail.com</p>
+                    <p data-i18n="privacy_sec3_desc">Contact us at devbyryosuke2025@gmail.com</p>
                 </div>
                 
                 <div class="h-px bg-white/10 my-8"></div>
