--- a/support.html
+++ b/support.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Face Mosaic Pro</title>
+    <title>Support - Face Mosaic Pro</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
@@ -19,27 +19,17 @@
         </div>
     </header>
 
-    <main class="flex-grow pt-32 pb-20 px-6">
-        <div class="container mx-auto max-w-3xl">
-            <h1 class="text-4xl font-bold mb-8 text-[#6C63FF]" data-i18n="terms_title">Terms of Service</h1>
+    <main class="flex-grow pt-32 pb-20 px-6 flex items-center">
+        <div class="container mx-auto max-w-2xl text-center">
+            <h1 class="text-4xl font-bold mb-6 text-white" data-i18n="support_title">Support</h1>
+            <p class="text-gray-400 mb-10 text-lg" data-i18n="support_desc">Have questions? We're here to help.</p>
             
-            <div class="glass p-8 rounded-2xl space-y-8 text-gray-300">
-                <p data-i18n="terms_intro" class="text-lg">By using Face Mosaic Pro, you agree to these terms.</p>
-                
-                <div>
-                    <h2 class="text-xl font-bold text-white mb-2" data-i18n="terms_sec1_title">1. License</h2>
-                    <p data-i18n="terms_sec1_desc">Personal use only.</p>
-                </div>
-
-                <div>
-                    <h2 class="text-xl font-bold text-white mb-2" data-i18n="terms_sec2_title">2. Advertisements</h2>
-                    <p data-i18n="terms_sec2_desc">You agree to see ads.</p>
-                </div>
-
-                <div>
-                    <h2 class="text-xl font-bold text-white mb-2" data-i18n="terms_sec3_title">3. Disclaimer</h2>
-                    <p data-i18n="terms_sec3_desc">App provided as-is.</p>
-                </div>
+            <div class="glass p-12 rounded-3xl inline-block hover:bg-white/5 transition duration-300">
+                <svg class="w-16 h-16 mx-auto mb-6 text-[#6C63FF]" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+                <a href="mailto:devbyryosuke2025@gmail.com" class="bg-white text-black px-10 py-4 rounded-full font-bold hover:bg-gray-200 transition inline-block" data-i18n="contact_btn">
+                    Contact Us via Email
+                </a>
+                <p class="mt-4 text-sm text-gray-500">devbyryosuke2025@gmail.com</p>
             </div>
         </div>
     </main>
